$Id: CHANGES,v 1.5 1999/10/11 13:31:03 stelian Exp $

Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
===================================================================

1.	Put dump sources under CVS, added Id tags in all files.

Changes between versions 0.4b6 and 0.4b7 (released October 8, 1999)
===================================================================

1.	Removed the 'k' flag from the restore 'about' text if kerberos
	was not compiled in.

2.	Prototyped (f)setflags from e2fsprogs and corrected the calls
	to them (fsetflags takes a char*, setflags an open fd!).

3.	(f)setflags is called only if the flags aren't empty. If the
	file is a special file, a warning is printed, because changing
	flags implies opening the device. Normally, a special file
	should not have any flag... (Debian bug #29775, patch provided
	by Abhijit Dasgupta <abhijit@ans.net>).

4.	Made possible to dump a file system not mentioned in /etc/fstab.
	(Debian bug #11904, patch provided by Eirik Fuller <eirik@netcom.com>).

5.	Changed the default behaviour to not create dumpdates
	unless 'u' option is specified. Removed the old "debian-patch"
	which provided the same thing. (Debian bug #38136, #33818).

6.	Removed all those dump*announce, since they were getting old...

7.	Added warning messages if dumpdates does not exist and
	when an inferior level dump does not exist (except for a level 0
	dump).

8.	Debugged the glob calls in interactive mode: restore used a 
	dirent struct which was different from the /usr/include/dirent.h
	one (this used to work, is it a glibc2 change?), so none of the 
	compat glob (which used /usr/include/dirent.h) or the system glob 
	worked. Restore use now the system dirent (and the system 
	DT_* constants), which are compatible with BSD ones.

9.	Added a configure flag (--with-dumpdatespath) to specify
	the location of dumpdates file. By default, it is 
	/etc/dumpdates.

10.	Added the "AUTHOR" and "AVAILABILITY" sections and 