@@ -2,9 +2,7 @@
  *	Ported to Linux's Second Extended File System as part of the
  *	dump and restore backup suit
  *	Remy Card <card@Linux.EU.Org>, 1994-1997
- *      Stelian Pop <pop@cybercable.fr>, 1999
- *
- * $Id: COPYRIGHT,v 1.3 1999/10/11 13:31:03 stelian Exp $
+ *	Stelian Pop <pop@cybercable.fr>, 1999
  */
 
 /*-
