@@ -1,10 +1,10 @@
-# $Id: MCONFIG.in,v 1.4 1999/10/11 13:31:03 stelian Exp $
+# $Id: MCONFIG.in,v 1.5 1999/10/13 09:57:12 stelian Exp $
 
 VPATH=		$(srcdir)
 
 top_builddir=	@top_builddir@
 
-VERSION=	dump 0.4b7
+VERSION=	0.4b7
 DATE=		October 8, 1999
 
 AR=		@AR@
@@ -49,7 +49,7 @@ GLIBS=		$(GLIBDIR) -L../compat/lib -lcompat -lext2fs -lcom_err
 #
 # Definitions (don't change them unless you know what you are doing)
 #
-DEFS=		-DRDUMP -DRRESTORE -D_BSD_SOURCE -D_USE_BSD_SIGNAL -DLINUX_FORK_BUG
+DEFS=		-DRDUMP -DRRESTORE -D_BSD_SOURCE -D_USE_BSD_SIGNAL -DLINUX_FORK_BUG -D_PATH_DUMPDATES=\"$(DUMPDATESPATH)\" -D_DUMP_VERSION=\"$(VERSION)\"
 
 all::
 
