@@ -2,8 +2,7 @@
  *	Ported to Linux's Second Extended File System as part of the
  *	dump and restore backup suit
  *	Remy Card <card@Linux.EU.Org>, 1994-1997
- *      Stelian Pop <pop@cybercable.fr>, 1999
- *
+ *	Stelian Pop <pop@cybercable.fr>, 1999
  */
 
 /*
@@ -40,8 +39,6 @@
  * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
- *
- * $Id: compatglob.c,v 1.2 1999/10/11 13:31:10 stelian Exp $
  */
 
 /*
@@ -68,6 +65,11 @@
  * gl_matchc:
  *	Number of matches in the current invocation of glob.
  */
+
+#ifndef lint
+static const char rcsid[] =
+	"$Id: compatglob.c,v 1.3 1999/10/13 09:57:19 stelian Exp $";
+#endif /* not lint */
 
 #include <config.h>
 
