@@ -30,11 +30,11 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$Id: dump.8.in,v 1.2 1999/10/11 13:31:10 stelian Exp $
+.\"	$Id: dump.8.in,v 1.3 1999/10/13 09:57:19 stelian Exp $
 .\"
 .Dd __DATE__
 .Dt DUMP 8
-.Os "__VERSION__"
+.Os "dump __VERSION__"
 .Sh NAME
 .Nm dump
 .Nd ext2 filesystem backup
