@@ -29,11 +29,11 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$Id: restore.8.in,v 1.2 1999/10/11 13:31:13 stelian Exp $
+.\"	$Id: restore.8.in,v 1.3 1999/10/13 09:57:21 stelian Exp $
 .\"
 .Dd __DATE__
 .Dt RESTORE 8
-.Os "__VERSION__"
+.Os "restore __VERSION__"
 .Sh NAME
 .Nm restore
 .Nd "restore files or file systems from backups made with dump"
