@@ -1,9 +1,13 @@
-$Id: CHANGES,v 1.5 1999/10/11 13:31:03 stelian Exp $
+$Id: CHANGES,v 1.6 1999/10/13 09:57:12 stelian Exp $
 
 Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 ===================================================================
 
-1.	Put dump sources under CVS, added Id tags in all files.
+1.	Put dump sources under CVS, added Id tags in all files so
+	one can use 'ident' on binary files.
+
+2.	Added the dump/restore version in the usage text so one can
+	easily verify the version he is using.
 
 Changes between versions 0.4b6 and 0.4b7 (released October 8, 1999)
 ===================================================================
